add connectBlock, recogIfNecessary, tryReorg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(tinychain_cpp)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(tinychain_cpp src/main.cpp src/Block.h src/OutPoint.h src/Params.h src/sha256.cpp src/sha256.h src/Transaction.h src/TxIn.h src/TxOut.h src/UnspentTxOut.h src/TinyChain.cpp src/TinyChain.h src/LocatedBlock.h src/TxoutForTxin.h)
+add_executable(tinychain_cpp src/main.cpp src/Block.h src/OutPoint.h src/Params.h src/sha256.cpp src/sha256.h src/Transaction.h src/TxIn.h src/TxOut.h src/UnspentTxOut.h src/TinyChain.cpp src/TinyChain.h src/LocatedBlock.h src/TxoutForTxin.h src/BlockValidationError.h)
 
 add_subdirectory (lib/evpp)
 target_link_libraries (tinychain_cpp evpp)
