--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
-[submodule "lib/evpp"]
-	path = lib/evpp
-	url = https://github.com/Qihoo360/evpp.git
+[submodule "lib/json"]
+	path = lib/json
+	url = https://github.com/nlohmann/json.git
+[submodule "lib/-f"]
+	path = lib/-f
+	url = https://github.com/bitcoin-core/secp256k1.git
+[submodule "lib/secp256k1"]
+	path = lib/secp256k1
+	url = https://github.com/bitcoin-core/secp256k1.git
